# MyVideoteca

./: README.md  docker-compose.yml  openapi.yaml
backend/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conandata.yml  conanfile.txt  dockerfile
backend/database/: database.c  database.h
backend/database/mariaDB/: mariaDB_driver.c
backend/database/postgreSQL/: postgres_driver.c
backend/resources/: properties.json
backend/src/: main.c
backend/src/auth/: auth.c  auth.h  jwt.h
backend/src/database/: database.c  mariaDB_driver.c  postgres_driver.c
backend/src/db/: postgres.c  postgres.h
backend/src/models/: film.c  film.h
backend/src/server/: request_handler.c  request_handler.h  socket_server.c  socket_server.h
backend/src/services/: all_rentals_service.c  all_rentals_service.h  login_service.c  login_service.h  rental_service.c  rental_service.h  return_service.c  return_service.h  search_service.c  search_service.h  signup_service.c  signup_service.h
backend/src/utils/: config.c  config.h  json.c  json.h  jwt_utils.c  jwt_utils.h  logger.c  logger.h
backend/tests/: all_rentals_test.cpp  all_rentals_test.h  login.cpp  login_test.cpp  main.cpp  signup_test.cpp
backend/tests/dummy/dummy/: dummy-test.cpp
backend/tests/service_tests/: login.cpp  signup.cpp
backend/tests/setup/: environment.cpp  environment.h
database/: 1-costanti.sql  2-database.sql  3-trigger.sql  4-insert.sql  database.sql  init.sql  trigger.sql
frontend/: .gitignore
frontend/MyVideoteca/: gradle.properties
frontend/MyVideoteca/app/: build.gradle.kts
frontend/MyVideoteca/app/src/androidTest/java/it/unina/myvideoteca/: ExampleInstrumentedTest.kt
frontend/MyVideoteca/app/src/main/: AndroidManifest.xml
frontend/MyVideoteca/app/src/main/java/it/unina/myvideoteca/: MainActivity.kt
frontend/MyVideoteca/app/src/main/java/it/unina/myvideoteca/data/: CarrelloFilm.kt  Film.kt  Noleggio.kt  RicercaFilm.kt  SharedPrefManager.kt  Utente.kt
frontend/MyVideoteca/app/src/main/java/it/unina/myvideoteca/server/: ServerController.kt
frontend/MyVideoteca/app/src/main/java/it/unina/myvideoteca/socket/: SocketClient.kt  SocketSingleton.kt
frontend/MyVideoteca/app/src/main/java/it/unina/myvideoteca/utils/: AppState.kt  DataParser.kt  FilmParser.kt  RegexChecker.kt  UrlFormatter.kt
frontend/MyVideoteca/app/src/main/java/it/unina/myvideoteca/view/: AccessoActivity.kt  CarrelloActivity.kt  CarrelloAdapter.kt  CercaActivity.kt  CercaRisultatiActivity.kt  CercaRisultatiAdapter.kt  HomeActivity.kt  NoleggiActivity.kt  NoleggiAdapter.kt  NoleggiCaricaActivity.kt
frontend/MyVideoteca/app/src/main/res/drawable/: light_button_background.xml  purple_border_background.xml
frontend/MyVideoteca/app/src/main/res/layout/: accesso.xml  carrello.xml  carrello_card.xml  cerca.xml  cerca_risultati.xml  cerca_risultati_card.xml  home.xml  noleggi.xml  noleggi_carica.xml  noleggio_card.xml  registrazione.xml
frontend/MyVideoteca/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
frontend/MyVideoteca/app/src/main/res/xml/: network_security_config.xml
frontend/MyVideoteca/app/src/test/java/it/unina/myvideoteca/: ExampleUnitTest.kt  SignupTest.kt
frontend/MyVideoteca/gradle/: libs.versions.toml
frontend/MyVideoteca/gradle/wrapper/: gradle-wrapper.properties
